# brooks

./:  pyproject.toml  .env  .gitignore  README.md  audit_bundle_20260123_115847.txt  bootstrap.ps1  bundle_repo.py  diagnose.bat  find_knobs_and_mismatches.py  find_symbol.py  fix_tests.py  full_repository_bundle.txt  institutional_optimal_20260116_011335.json  knobs_and_mismatches.json  main.py  make_audit_txt.ps1  master_researcher_v3.py  mt5-symbols.md  profile_60d.prof  pyproject.toml  quick_param_finder.py  requirements.txt  requirements_runtime.txt  risk_optimizer  run_grid_search_v2.bat  start_backtest.bat  start_live.bat  trade_notifier.ps1
backtest/: config_formatter.py  ftmo_report_generator.py  ftmo_risk_report.py  institutional_audit.py  optimization_results.csv  optimizer.py  optimizer_backup.py  runner.py  smoke_test.py  test.py  visualiser.py  visualiser_v2.py
config/: active_params.json  dax_morning.yaml  production.example.yaml  production.yaml  strategy_us500_optimal.yaml
diagnostics/: quick_audit.py
evidence/: requirements_baseline.txt
examples/: mt5_list_us500.py
execution/: emergency_stop.py  ftmo_guardian.py  ftmo_state.py  guardrails.py  order_manager.py  risk_manager.py  selection.py  trade_executor.py  trade_gate.py
scripts/: auto_fix.py  check_backtest_period.py  check_ftmo_data_limits.py  check_trades_per_day.py  dev_check.ps1  fast_grid_search.py  fix_zip_strict.py  live_auto_trader.py  live_monitor.py  live_tracker.py  make_llm_bundle.ps1  optimal_config_20260113_162721.json  snapshot_status.ps1  strategy_grid_search.py  test_ftmo_data_limits.py  test_multi_timeframe.py  what_if_risk_and_frequency.py
strategies/: config.py  context.py  h2l2.py  regime.py  regime_debug.py
tests/: run_all_tests.py  test_backtest_both_hit_policy.py  test_backtest_daily_selection.py  test_backtest_exit_simulation.py  test_config.py  test_config_formatter.py  test_context.py  test_debug_quick.py  test_debug_system.py  test_framework.py  test_ftmo_protection.py  test_guardrails.py  test_h2l2.py  test_h2l2_next_open.py  test_live_monitor_session.py  test_llm_bundle_smoke.py  test_main_parser_defaults.py  test_monthly_metrics.py  test_mt5_client.py  test_mt5_data.py  test_mt5_data_chunked.py  test_riskmanager.py  test_selection_diagnostics.py  test_selection_stability.py  test_symbol_spec.py  test_visualiser_v2.py  test_yearly_metrics.py
tools/: __init__.py  (+4 more)
(+55 files in other folders)
